[package]
name = "heapless-bytes"
version = "0.4.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Apache-2.0 OR MIT"
description = "Newtype around heapless byte Vec with efficient serde."
categories = ["embedded", "encoding", "no-std"]
keywords = ["serde", "cbor", "rust", "no-std"]
repository = "https://github.com/ycrypto/heapless-bytes"
readme = "README.md"
edition = "2021"


[dependencies]
heapless = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false }

[dependencies.serde_cbor]
version = "0.11.0"
default-features = false
optional = true

[features]
cbor = ["serde_cbor"]

[dev-dependencies]
serde_test = "1.0.176"
