[package]
name = "heapless-bytes"
version = "0.5.0"
authors = ["The Trussed developers", "Nicolas Stalder <n@stalder.io>", "Nitrokey GmbH"]
license = "Apache-2.0 OR MIT"
description = "Newtype around heapless byte Vec with efficient serde."
categories = ["embedded", "encoding", "no-std"]
keywords = ["serde", "cbor", "rust", "no-std"]
repository = "https://github.com/ycrypto/heapless-bytes"
readme = "README.md"
edition = "2021"


[dependencies]
heapless = { version = "0.9.1", default-features = false }
bytes = { version = "1.10.1", default-features = false, optional = true }
serde = { version = "1.0", default-features = false }

[dev-dependencies]
serde_test = "1.0.176"

[features]
"heapless-0.9" = []
bytes = ["dep:bytes"]
